--- a/pallets/liquidity-proxy/benchmarking/Cargo.toml
+++ b/pallets/liquidity-proxy/benchmarking/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-edition = '2018'
-name = 'liquidity-proxy-benchmarking'
-version = '0.1.0'
-authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
+edition = "2018"
+name = "liquidity-proxy-benchmarking"
+version = "0.1.0"
+authors = ["Polka Biome Ltd. <jihoon@tutanota.de>"]
 license = "BSD-4-Clause"
-homepage = 'https://sora.org'
-repository = 'https://github.com/sora-xor/sora2-network'
+homepage = "https://sora.org"
+repository = "https://github.com/sora-xor/sora2-network"
 
 [package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
+targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
@@ -24,6 +24,7 @@ liquidity-proxy = { path = "../../liquidity-proxy", default-features = false }
 mock-liquidity-source = { path = "../../mock-liquidity-source", default-features = false }
 permissions = { path = "../../permissions", default-features = false }
 pool-xyk = { path = "../../pool-xyk", default-features = false }
+price-tools = { path = "../../price-tools", default-features = false }
 pswap-distribution = { path = "../../pswap-distribution", default-features = false }
 technical = { path = "../../technical", default-features = false }
 trading-pair = { path = "../../trading-pair", default-features = false }
@@ -44,26 +45,27 @@ mock-liquidity-source = { path = "../../mock-liquidity-source" }
 vested-rewards = { path = "../../vested-rewards" }
 
 [features]
-default = ['std']
+default = ["std"]
 std = [
-    'codec/std',
-    'frame-support/std',
-    'frame-system/std',
-    'frame-benchmarking/std',
-    'sp-std/std',
-    'sp-runtime/std',
-    'sp-core/std',
-    'common/std',
-    'assets/std',
-    'liquidity-proxy/std',
-    'mock-liquidity-source/std',
-    'pool-xyk/std',
-    'permissions/std',
-    'technical/std',
-    'trading-pair/std',
-    'multicollateral-bonding-curve-pool/std',
-    'dex-manager/std',
-    'bonding-curve-pool/std',
-    'dex-api/std',
-    'pswap-distribution/std',
+    "assets/std",
+    "bonding-curve-pool/std",
+    "codec/std",
+    "common/std",
+    "dex-api/std",
+    "dex-manager/std",
+    "frame-benchmarking/std",
+    "frame-support/std",
+    "frame-system/std",
+    "liquidity-proxy/std",
+    "mock-liquidity-source/std",
+    "multicollateral-bonding-curve-pool/std",
+    "permissions/std",
+    "pool-xyk/std",
+    "price-tools/std",
+    "pswap-distribution/std",
+    "sp-core/std",
+    "sp-runtime/std",
+    "sp-std/std",
+    "technical/std",
+    "trading-pair/std",
 ]
