--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -206,6 +206,7 @@ runtime-benchmarks = [
     "trading-pair/runtime-benchmarks",
     "multicollateral-bonding-curve-pool/runtime-benchmarks",
     "pswap-distribution/runtime-benchmarks",
+    "price-tools/runtime-benchmarks",
 ]
 
 reduced-pswap-reward-periods = []
