--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -27,6 +27,7 @@ assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 referral-system = { path = "../referral-system", default-features = false }
+eth-bridge = { path = "../eth-bridge", default-features = false }
 
 [dev-dependencies]
 currencies = { version = "0.4", package = "orml-currencies" }
@@ -38,6 +39,8 @@ sp-io = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens" }
 pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets", branch = "v3.1.0" }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "v3.2.2", package = "pallet-multisig" }
+pallet-scheduler = { version = "3" }
 
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
@@ -55,7 +58,6 @@ std = [
     "frame-support/std",
     "frame-system/std",
     "pallet-session/std",
-    "pallet-staking/std",
     "pallet-transaction-payment/std",
     "serde",
     "sp-arithmetic/std",
@@ -63,4 +65,5 @@ std = [
     "sp-staking/std",
     "sp-std/std",
     "traits/std",
+    "eth-bridge/std",
 ]
