[ETH Bridge] PSS-1068 Refactor structure (#460)
* Refactor structure

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -73,6 +73,7 @@ std = [
     'sp-std/std',
     'pallet-scheduler/std',
     'pallet-timestamp/std',
+    'common/std'
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
