--- a/misc/market_makers/package.json
+++ b/misc/market_makers/package.json
@@ -4,6 +4,7 @@
     "@polkadot/rpc-provider": "^4.1.1",
     "@polkadot/util-crypto": "^6.0.5",
     "@sora-substrate/api": "^1.3.27",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "bignumber.js": "^9.0.1"
   }
 }
