--- a/Cargo.toml
+++ b/Cargo.toml
@@ -185,7 +185,9 @@ members = [
     "pallets/vested-rewards",
     "pallets/price-tools",
     "node/",
+    "utils/parse",
 ]
+
 resolver = "2"
 
 [profile.release]
