--- a/pallets/iroha-migration/Cargo.toml
+++ b/pallets/iroha-migration/Cargo.toml
@@ -28,6 +28,7 @@ assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 referral-system = { path = "../referral-system", default-features = false }
 technical = { path = "../technical", default-features = false }
+eth-bridge = {path = "../eth-bridge", default-features = false }
 
 [dev-dependencies]
 currencies = { version = "0.4", package = "orml-currencies" }
@@ -43,6 +44,7 @@ common = { path = "../../common", features = ["test"] }
 permissions = { path = "../permissions" }
 referral-system = { path = "../referral-system" }
 technical = { path = "../technical" }
+eth-bridge = {path = "../eth-bridge" }
 
 [features]
 default = ["std"]
