--- a/node/chain_spec/Cargo.toml
+++ b/node/chain_spec/Cargo.toml
@@ -32,6 +32,7 @@ xor-fee = { path = "../../pallets/xor-fee" }
 include-real-files = []
 main-net-coded = []
 test = []
+runtime-benchmarks = []
 
 private-net = [
     "faucet",
