--- a/pallets/iroha-migration/Cargo.toml
+++ b/pallets/iroha-migration/Cargo.toml
@@ -26,7 +26,7 @@ ed25519-dalek-iroha = { git = "https://github.com/soramitsu/sora2-ed25519-dalek-
 
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
-referral-system = { path = "../referral-system", default-features = false }
+referrals = { path = "../referrals", default-features = false }
 technical = { path = "../technical", default-features = false }
 eth-bridge = {path = "../eth-bridge", default-features = false }
 
@@ -42,7 +42,7 @@ tokens = { version = "0.4", package = "orml-tokens" }
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
 permissions = { path = "../permissions" }
-referral-system = { path = "../referral-system" }
+referrals = { path = "../referrals" }
 technical = { path = "../technical" }
 eth-bridge = {path = "../eth-bridge" }
 
