Vmarkushin/fix free extrinsics (#501)
* Update Cargo.lock

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

* [ETH Bridge] Correct fees (#458)

* Correct fees

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

(cherry picked from commit bde49e0bf3560be26497089aadd46eb96d5b70f8)
Signed-off-by: Vladislav Markushin <negigic@gmail.com>

* Make bridge extrinsics that are called by peers free in pre-dispatch (#462)

* Make bridge extrinsics that are called by peers free in pre-dispatch

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

(cherry picked from commit d1a8ab6121e56e3e804bbe96474f4216af2d56b3)
Signed-off-by: Vladislav Markushin <negigic@gmail.com>

* Update bridge-multisig

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

* Update specs

Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -30,6 +30,7 @@ assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 referral-system = { path = "../referral-system", default-features = false }
+eth-bridge = { path = "../eth-bridge", default-features = false }
 
 [dev-dependencies]
 currencies = { version = "0.4", package = "orml-currencies" }
@@ -40,6 +41,7 @@ sp-core = { version = "3", default-features = false }
 sp-io = { version = "3", default-features = false }
 sp-runtime = { version = "3", default-features = false }
 tokens = { version = "0.4", package = "orml-tokens" }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "v3.1.1-hotfix", package = "pallet-multisig" }
 
 common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
@@ -64,4 +66,5 @@ std = [
     'sp-staking/std',
     'sp-std/std',
     'traits/std',
+    "eth-bridge/std",
 ]
