--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -141,7 +141,7 @@ std = [
     "eth-bridge-runtime-api/std",
     "eth-bridge/std",
     "farming/std",
-    "faucet?/std",
+    "faucet/std",
     "frame-executive/std",
     "frame-support/std",
     "frame-system-rpc-runtime-api/std",
@@ -210,7 +210,7 @@ runtime-benchmarks = [
     "dex-api-benchmarking",
     "eth-bridge/runtime-benchmarks",
     "farming/runtime-benchmarks",
-    "faucet?/runtime-benchmarks",
+    "faucet/runtime-benchmarks",
     "frame-benchmarking",
     "frame-support/runtime-benchmarks",
     "frame-system-benchmarking",
