--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,81 +87,83 @@ thread_local = { git = "https://github.com/KalitaAlexey/thread_local-rs.git", br
 
 
 [patch."https://github.com/paritytech/substrate.git"]
-frame-benchmarking = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-frame-executive = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-frame-support = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-frame-system = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-frame-system-benchmarking = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-aura = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-authorship = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-babe = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-balances = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-collective = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-democracy = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-grandpa = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-identity = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-im-online = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-membership = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-multisig = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-offences = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-randomness-collective-flip = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-scheduler = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-session = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-sudo = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-timestamp = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-transaction-payment = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-utility = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-basic-authorship = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-chain-spec = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-cli = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-client-api = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-consensus = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-consensus-aura = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-consensus-babe = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-consensus-slots = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-executor = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-finality-grandpa = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-informant = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-network = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-rpc-api = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-service = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-transaction-pool = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-api = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-application-crypto = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-arithmetic = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-block-builder = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-blockchain = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-consensus = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-consensus-aura = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-consensus-babe = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-core = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-finality-grandpa = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-inherents = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-io = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-keystore = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-offchain = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-npos-elections = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-runtime = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-runtime-interface = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-session = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-staking = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-std = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-storage = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-timestamp = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-transaction-pool = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-trie = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sp-version = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-sc-telemetry = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
-pallet-mmr = { git = "https://github.com/paritytech//substrate.git", rev = "287b5c5a" }
+frame-benchmarking = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+frame-benchmarking-cli = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+frame-executive = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+frame-support = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+frame-system = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+frame-system-benchmarking = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+frame-system-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-aura = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-authorship = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-babe = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-balances = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-collective = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-democracy = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-elections-phragmen = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-grandpa = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-identity = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-im-online = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-membership = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-multisig = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-offences = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-randomness-collective-flip = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-scheduler = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-session = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-sudo = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-timestamp = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-transaction-payment = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-utility = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-basic-authorship = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-chain-spec = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-cli = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-client-api = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-consensus = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-consensus-aura = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-consensus-babe = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-consensus-slots = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-executor = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-finality-grandpa = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-informant = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-network = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-rpc-api = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-service = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-transaction-pool = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-api = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-application-crypto = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-arithmetic = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-block-builder = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-blockchain = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-consensus = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-consensus-aura = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-consensus-babe = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-core = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-finality-grandpa = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-inherents = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-io = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-keystore = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-offchain = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-npos-elections = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-runtime = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-runtime-interface = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-session = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-staking = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-std = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-storage = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-timestamp = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-transaction-pool = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-trie = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-version = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sp-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+sc-telemetry = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+substrate-frame-rpc-system = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-mmr-primitives = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-mmr-rpc = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+pallet-mmr = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
+substrate-prometheus-endpoint = { git = "https://github.com/paritytech//substrate.git", rev = "b7a1a2cd" }
 
 [patch."https://github.com/paritytech/grandpa-bridge-gadget.git"]
 beefy-primitives = { git = "https://github.com/paritytech//grandpa-bridge-gadget.git", branch = "master" }
