--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,7 +176,7 @@ members = [
     "pallets/pool-xyk",
     "pallets/rewards",
     "pallets/xor-fee",
-    "pallets/referrals",
+    "pallets/referral-system",
     "pallets/eth-bridge",
     "pallets/pswap-distribution",
     "pallets/multicollateral-bonding-curve-pool",
