--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -26,7 +26,7 @@ traits = { version = "0.4", package = "orml-traits", default-features = false }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
-referrals = { path = "../referrals", default-features = false }
+referral-system = { path = "../referral-system", default-features = false }
 eth-bridge = { path = "../eth-bridge", default-features = false }
 
 [dev-dependencies]
@@ -46,7 +46,7 @@ common = { path = "../../common", features = ["test"] }
 dex-manager = { path = "../dex-manager" }
 mock-liquidity-source = { path = "../mock-liquidity-source" }
 permissions = { path = "../permissions" }
-referrals = { path = "../referrals" }
+referral-system = { path = "../referral-system" }
 technical = { path = "../technical" }
 trading-pair = { path = "../trading-pair" }
 
@@ -58,7 +58,6 @@ std = [
     "frame-support/std",
     "frame-system/std",
     "pallet-session/std",
-    "pallet-staking/std",
     "pallet-transaction-payment/std",
     "serde",
     "sp-arithmetic/std",
