--- a/pallets/trustless-eth-bridge/basic-channel/Cargo.toml
+++ b/pallets/trustless-eth-bridge/basic-channel/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "incentivized-channel"
-description = "Snowbridge Incentivized Channel"
+name = "basic-channel"
+description = "Snowbridge Basic Channel"
 version = "0.1.1"
 edition = "2018"
 authors = ["Snowfork <contact@snowfork.com>"]
@@ -24,17 +24,14 @@ sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polka
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-assets = { path = "../assets", default-features = false }
-common = { path = "../../common", default-features = false }
-permissions = { path = "../permissions", default-features = false }
-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
 
-snowbridge-core = { path = "../../primitives/core", default-features = false }
-snowbridge-ethereum = { path = "../../primitives/ethereum", default-features = false }
+snowbridge-core = { path = "../../../primitives/core", default-features = false }
+snowbridge-ethereum = { path = "../../../primitives/ethereum", default-features = false }
 ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }
 
 [dev-dependencies]
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
+assets = { path = "../../assets" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 hex-literal = { version = "0.3.1" }
 rlp = { version = "0.5" }
@@ -53,8 +50,6 @@ std = [
     "snowbridge-core/std",
     "snowbridge-ethereum/std",
     "ethabi/std",
-    "common/std",
-    "traits/std",
 ]
 runtime-benchmarks = [
     "snowbridge-core/runtime-benchmarks",
