--- a/pallets/trustless-eth-bridge/eth-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/eth-app/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "basic-channel"
-description = "Snowbridge Basic Channel"
+name = "eth-app"
 version = "0.1.1"
-edition = "2018"
 authors = ["Snowfork <contact@snowfork.com>"]
-repository = "https://github.com/Snowfork/snowbridge"
+edition = "2018"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -14,8 +12,9 @@ serde = { version = "1.0.101", optional = true }
 codec = { version = "2.0.0", package = "parity-scale-codec", default-features = false, features = [
     "derive",
 ] }
-hex-literal = { version = "0.3.1", optional = true }
-rlp = { version = "0.5", default-features = false, optional = true }
+hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
+rlp = { version = "0.5", default-features = false }
+hex-literal = { version = "0.3.1", default-features = false }
 
 frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false, optional = true }
 frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
@@ -25,37 +24,37 @@ sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkad
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 
-snowbridge-core = { path = "../../primitives/core", default-features = false }
-snowbridge-ethereum = { path = "../../primitives/ethereum", default-features = false }
 ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }
 
+snowbridge-core = { path = "../../../primitives/core", default-features = false }
+snowbridge-ethereum = { path = "../../../primitives/ethereum", default-features = false }
+
+assets = { path = "../../assets", default-features = false }
+traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
+
 [dev-dependencies]
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
-assets = { path = "../assets" }
+dispatch = { path = "../dispatch" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
-hex-literal = { version = "0.3.1" }
-rlp = { version = "0.5" }
 
 [features]
 default = ["std"]
 std = [
     "serde",
+    "hex/std",
     "codec/std",
     "frame-support/std",
     "frame-system/std",
     "sp-core/std",
-    "sp-runtime/std",
     "sp-std/std",
     "sp-io/std",
+    "sp-runtime/std",
     "snowbridge-core/std",
     "snowbridge-ethereum/std",
     "ethabi/std",
+    "rlp/std",
 ]
 runtime-benchmarks = [
-    "snowbridge-core/runtime-benchmarks",
     "frame-benchmarking",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
-    "hex-literal",
-    "rlp",
 ]
