--- a/pallets/trustless-eth-bridge/ethereum-light-client/Cargo.toml
+++ b/pallets/trustless-eth-bridge/ethereum-light-client/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "eth-app"
+name = "ethereum-light-client"
+description = "Ethereum Light Client Pallet"
 version = "0.1.1"
-authors = ["Snowfork <contact@snowfork.com>"]
 edition = "2018"
+authors = ["Snowfork <contact@snowfork.com>"]
+repository = "https://github.com/Snowfork/snowbridge"
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
@@ -13,8 +15,8 @@ codec = { version = "2.0.0", package = "parity-scale-codec", default-features = 
     "derive",
 ] }
 hex = { package = "rustc-hex", version = "2.1.0", default-features = false }
+hex-literal = { version = "0.3.1", optional = true }
 rlp = { version = "0.5", default-features = false }
-hex-literal = { version = "0.3.1", default-features = false }
 
 frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false, optional = true }
 frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
@@ -24,37 +26,36 @@ sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkad
 sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 
-ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }
+snowbridge-core = { path = "../../../primitives/core", default-features = false }
+snowbridge-ethereum = { path = "../../../primitives/ethereum", default-features = false }
 
-snowbridge-core = { path = "../../primitives/core", default-features = false }
-snowbridge-ethereum = { path = "../../primitives/ethereum", default-features = false }
-
-assets = { path = "../assets", default-features = false }
-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits", default-features = false }
+ethash = { git = "https://github.com/snowfork/ethash.git", branch = "master", default-features = false }
 
 [dev-dependencies]
-dispatch = { path = "../dispatch" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
+hex-literal = { version = "0.3.1" }
+snowbridge-testutils = { path = "../../../primitives/testutils" }
+serde_json = "1.0"
 
 [features]
 default = ["std"]
 std = [
     "serde",
-    "hex/std",
     "codec/std",
+    "ethash/std",
     "frame-support/std",
     "frame-system/std",
+    "rlp/std",
     "sp-core/std",
-    "sp-std/std",
     "sp-io/std",
     "sp-runtime/std",
+    "sp-std/std",
     "snowbridge-core/std",
     "snowbridge-ethereum/std",
-    "ethabi/std",
-    "rlp/std",
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "hex-literal",
 ]
