--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -66,11 +66,11 @@ vested-rewards = { path = "../pallets/vested-rewards", default-features = false 
 xor-fee = { path = "../pallets/xor-fee", default-features = false }
 xor-fee-benchmarking = { path = "../pallets/xor-fee/benchmarking", default-features = false, optional = true }
 xst = { path = "../pallets/xst", default-features = false }
-ethereum-light-client = { path = "../pallets/ethereum-light-client", default-features = false }
-basic-channel = { path = "../pallets/basic-channel", default-features = false }
-incentivized-channel = { path = "../pallets/incentivized-channel", default-features = false }
-dispatch = { path = "../pallets/dispatch", default-features = false }
-eth-app = { path = "../pallets/eth-app", default-features = false }
+ethereum-light-client = { path = "../pallets/trustless-eth-bridge/ethereum-light-client", default-features = false }
+basic-channel = { path = "../pallets/trustless-eth-bridge/basic-channel", default-features = false }
+incentivized-channel = { path = "../pallets/trustless-eth-bridge/incentivized-channel", default-features = false }
+dispatch = { path = "../pallets/trustless-eth-bridge/dispatch", default-features = false }
+eth-app = { path = "../pallets/trustless-eth-bridge/eth-app", default-features = false }
 
 # Substrate dependencies
 frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false, optional = true }
