--- a/pallets/trustless-eth-bridge/eth-app/Cargo.toml
+++ b/pallets/trustless-eth-bridge/eth-app/Cargo.toml
@@ -35,6 +35,12 @@ traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library
 [dev-dependencies]
 dispatch = { path = "../dispatch" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
+pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
+permissions = { path = "../../permissions" }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
+traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits" }
+common = { path = "../../../common" }
+currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
 
 [features]
 default = ["std"]
