--- a/pallets/trustless-eth-bridge/incentivized-channel/Cargo.toml
+++ b/pallets/trustless-eth-bridge/incentivized-channel/Cargo.toml
@@ -35,6 +35,11 @@ ethabi = { git = "https://github.com/Snowfork/ethabi-decode.git", package = "eth
 
 [dev-dependencies]
 pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
+permissions = { path = "../../permissions" }
+tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-tokens" }
+traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-traits" }
+common = { path = "../../../common" }
+currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", package = "orml-currencies" }
 sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 hex-literal = { version = "0.3.1" }
 rlp = { version = "0.5" }
