--- a/pallets/ceres-staking/Cargo.toml
+++ b/pallets/ceres-staking/Cargo.toml
@@ -26,6 +26,12 @@ serde = { version = "1.0.101", optional = true, features = ["derive"], default-f
 [dev-dependencies]
 assets = { path = "../assets" }
 common = { path = "../../common", features = ["test"] }
+currencies = { version = "0.4", package = "orml-currencies", default-features = false }
+hex-literal = "0.3.1"
+sp-io = { version = "3", default-features = false }
+tokens = { version = "0.4", package = "orml-tokens", default-features = false }
+pallet-balances = { version = "3" }
+permissions = { path = "../permissions" }
 
 [features]
 default = ["std"]
