--- a/housekeeping/docker/develop/Dockerfile
+++ b/housekeeping/docker/develop/Dockerfile
@@ -4,7 +4,7 @@ FROM debian:buster-slim
 ENV RUSTUP_HOME="/opt/rust"
 ENV CARGO_HOME="/opt/rust"
 ENV PATH="$PATH:$RUSTUP_HOME/bin"
-ENV RUST_VERSION=nightly-2021-03-11
+ENV RUST_VERSION=1.54
 
 # Install dependencies
 RUN apt-get update && \
