--- a/housekeeping/docker/env-debug/Dockerfile
+++ b/housekeeping/docker/env-debug/Dockerfile
@@ -1,22 +1,19 @@
-FROM debian:bullseye-slim
-
+FROM debian:buster-slim
 # Set environment variables
 ENV RUSTUP_HOME="/opt/rust"
 ENV CARGO_HOME="/opt/rust"
 ENV PATH="$PATH:$RUSTUP_HOME/bin"
-ENV RUST_VERSION=1.54
-
+ENV CARGO_BUILD_DEP_INFO_BASEDIR="."
 # Install dependencies
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
         ca-certificates apt-transport-https gnupg \
         libssl-dev pkg-config \
         curl \
-        git \
+        git binaryen \
         software-properties-common \
         llvm clang && \
     rm -rf /var/lib/apt/lists/*
-
 # Install docker
 RUN curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 RUN add-apt-repository \
@@ -25,22 +22,23 @@ RUN add-apt-repository \
     apt-get install --no-install-recommends -y \
         docker-ce docker-ce-cli containerd.io && \
     rm -rf /var/lib/apt/lists/*
-
 # Install rust
+ENV RUST_VERSION=nightly-2021-03-11
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-toolchain ${RUST_VERSION} && \
     rustup target add wasm32-unknown-unknown
-RUN curl https://github.com/chevdor/subwasm/releases/download/v0.14.1/subwasm_linux_amd64_v0.14.1.deb -sSf -O subw.deb && \
-    dpkg -i subw.deb && rm subw.deb
-RUN cargo install sccache
-ENV RUSTC_WRAPPER=sccache
-ENV CARGO_INCREMENTAL=0
+
+RUN cargo install sccache && \
+    cargo install grcov && \
+    rustup component add llvm-tools-preview
 
 # Build project
 ADD . /app
 WORKDIR /app
-RUN cargo check
-RUN cargo test
-
-# Remove source code
+ENV RUSTC_WRAPPER=sccache
+ENV CARGO_INCREMENTAL=0
+RUN cargo check && \
+    cargo test && \
+    cargo check --features private-net && \
+    cargo test --features private-net && \
+    cargo check --features runtime-benchmarks
 WORKDIR /
-RUN rm -rf /app
