Add changes for Sub4
Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

--- a/housekeeping/docker/env-release/Dockerfile
+++ b/housekeeping/docker/env-release/Dockerfile
@@ -27,7 +27,7 @@ RUN add-apt-repository \
     rm -rf /var/lib/apt/lists/*
 
 # Install rust
-ENV RUST_VERSION=nightly-2021-03-11
+ENV RUST_VERSION=1.54
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-toolchain ${RUST_VERSION} && \
     rustup default ${RUST_VERSION} && \
     rustup target add wasm32-unknown-unknown
