--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -16,7 +16,10 @@ futures = { version = "0.3.1", features = ["compat"] }
 log = "0.4.8"
 parking_lot = "0.11"
 trie-root = "0.16.0"
-codec = { package = "parity-scale-codec", version = "2", features = ["derive", "chain-error"] }
+codec = { package = "parity-scale-codec", version = "2", features = [
+    "derive",
+    "chain-error",
+] }
 structopt = "0.3.3"
 ansi_term = "0.12.1"
 serde = { version = "1.0.101", features = ["derive"] }
@@ -29,7 +32,7 @@ framenode-chain-spec = { path = "chain_spec" }
 common = { path = "../common" }
 dex-api-rpc = { path = "../pallets/dex-api/rpc" }
 dex-manager-rpc = { path = "../pallets/dex-manager/rpc" }
-technical = {path = "../pallets/technical" }
+technical = { path = "../pallets/technical" }
 xor-fee = { path = "../pallets/xor-fee" }
 rewards = { path = "../pallets/rewards" }
 rewards-rpc = { path = "../pallets/rewards/rpc" }
@@ -61,10 +64,16 @@ sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branc
 sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
-sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = ["wasmtime"] }
+sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = [
+    "wasmtime",
+] }
 sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
-sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = ["wasmtime"] }
-sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = ["wasmtime"] }
+sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = [
+    "wasmtime",
+] }
+sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", features = [
+    "wasmtime",
+] }
 sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
@@ -88,6 +97,7 @@ pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", b
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
 beefy-gadget-rpc = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "polkadot-v0.9.9" }
 pallet-mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9" }
+leaf-provider-rpc = { path = "../pallets/trustless-eth-bridge/leaf-provider-with-digest/rpc", default-features = false }
 
 [build-dependencies]
 substrate-build-script-utils = "3"
