--- a/pallets/trustless-eth-bridge/leaf-provider-with-digest/runtime-api/Cargo.toml
+++ b/pallets/trustless-eth-bridge/leaf-provider-with-digest/runtime-api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "assets-runtime-api"
+name = "leaf-provider-runtime-api"
 version = "0.1.0"
 edition = "2018"
 authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
@@ -8,22 +8,14 @@ homepage = 'https://sora.org'
 repository = 'https://github.com/sora-xor/sora2-network'
 
 [dependencies]
+codec = { package = "parity-scale-codec", version = "2", default-features = false, features = [
+    "derive",
+] }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
 sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.9", default-features = false }
-common = { path = "../../../common", default-features = false}
-
-[dev-dependencies]
-serde_json = "1.0.68"
 
 [features]
 default = ["std"]
-std = [
-    "serde",
-    "codec/std",
-    "sp-api/std",
-    "sp-runtime/std",
-    "sp-std/std",
-]
+std = ["codec/std", "serde", "sp-api/std", "sp-runtime/std", "sp-std/std"]
